--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -23,7 +23,7 @@
                                     <div class="col-md-5 col-xl-6 col-6">
                                         <p><strong>Earnings:</strong></p>
                                         <h1>N{{user.amount_received}}</h1>
-                                        <p class="mb-0">Welcome bonus <strong>+30%</strong> expires in 21 days.</p>
+                                        <p class="mb-0">Contributed <strong>N{{user.amount_received}}</strong> in {{user.date_joined|timesince}}</p>
                                     </div>
                                     <div class="col-md-4 col-xl-4 col-3 text-right">
                                         <button type="submit"
