--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -16,14 +16,14 @@
                                         to the next level with us</h1>
                                     <p>Individuals and businesses of all sizes are using online marketing but small
                                         businesses may
-                                        not have the type of online presence tto follow up new
+                                        not have the type of online presence to follow up new
                                         customers.
                                         Agapeer is a robust platform for convenient Airtime
                                         Recharge/Data funding
                                     </p>
                                     <div class="banner-btn d-flex">
                                         <div class="play-btn">
-                                            <a href="#!" class="btn">Learn More</a>
+                                            <a href="{% url 'about_page' %}" class="btn">Learn More</a>
                                         </div>
                                     </div>
                                     <!--"banner-btn-->
@@ -198,7 +198,7 @@
                 <div class="col-md-2">
                     <div class="reason-work-btn d-flex">
                         <div class="play-btn">
-                            <a href="contact-us.html" class="btn">Contact us</a>
+                            <a href="{% url 'contact_page' %}" class="btn">Contact us</a>
                         </div>
                     </div>
                 </div>
