--- a/templates/base/auth_base.html
+++ b/templates/base/auth_base.html
@@ -24,7 +24,7 @@
         <div class="forny-inner">
             <div class="forny-form">
                 <div class="mb-8 text-center forny-logo">
-                    <img src="{% static 'images/backgrounds/accounts/logo-03.svg' %}">
+                    <img src="{% static 'landing/assets/img/logo-n.png' %}" %}">
                 </div>
                 {% block auth_text %}
                 {% endblock auth_text %}
