--- a/templates/partials/dashboard_navbar.html
+++ b/templates/partials/dashboard_navbar.html
@@ -1,7 +1,8 @@
+{% load static %}
 <div class="main-menu menu-fixed menu-dark menu-bg-default rounded menu-accordion menu-shadow">
     <div class="main-menu-content">
         <a class="navigation-brand d-none d-md-block d-lg-block d-xl-block" href="{% url 'dashboard' %}">
-            <img class="brand-logo" alt=" logo" src="images/logo/logo.png" />
+            <img class="brand-logo" alt=" logo" src="{% static 'landing/assets/img/logo-n.png' %}" />
         </a>
         <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
             <li class="{% if page == 'dashboard' %}active{% endif %}"><a href="{% url 'dashboard' %}">
@@ -19,9 +20,9 @@
             <li class=" nav-item {% if page == 'transaction' %}active{% endif %}"><a href="{% url 'transactions' %}">
                     <i class="icon-chart"></i><span class="menu-title">Transactions</span></a>
             </li>
-            <li class=" nav-item {% if page == 'faq' %}active{% endif %}"><a href="faq.html">
+            {% comment %} <li class=" nav-item {% if page == 'faq' %}active{% endif %}"><a href="faq.html">
                     <i class="icon-support"></i><span class="menu-title">FAQ</span></a>
-            </li>
+            </li> {% endcomment %}
             <li class=" nav-item {% if page == 'profile' %}active{% endif %}"><a
                     href="{% url 'user_profile' user.username %}"><i class="icon-user-following"></i><span
                         class="menu-title">Account</span></a>
